完成 java8 转换