@@ -4,7 +4,7 @@
 
 package com.agentclientprotocol.sdk.spec;
 
-import io.modelcontextprotocol.json.TypeRef;
+import com.agentclientprotocol.sdk.json.TypeRef;
 import com.agentclientprotocol.sdk.error.AcpErrorCodes;
 import com.agentclientprotocol.sdk.error.AcpProtocolException;
 import com.agentclientprotocol.sdk.util.Assert;
@@ -161,10 +161,10 @@ public class AcpClientSession implements AcpSession {
 	}
 
 	private void handle(AcpSchema.JSONRPCMessage message) {
-		if (message instanceof AcpSchema.JSONRPCResponse response) {
-			logger.debug("Received response: {}", response);
+		if (message instanceof AcpSchema.JSONRPCResponse) {
+AcpSchema.JSONRPCResponse response = (AcpSchema.JSONRPCResponse) message;			logger.debug("Received response: {}", response);
 			if (response.id() != null) {
-				var sink = pendingResponses.remove(response.id());
+				reactor.core.publisher.MonoSink<AcpSchema.JSONRPCResponse> sink = pendingResponses.remove(response.id());
 				if (sink == null) {
 					logger.warn("Unexpected response for unknown id {}", response.id());
 				}
@@ -179,21 +179,21 @@ public class AcpClientSession implements AcpSession {
 						+ "leaks as pending requests will never be completed.");
 			}
 		}
-		else if (message instanceof AcpSchema.JSONRPCRequest request) {
-			logger.debug("Received request: {}", request);
+		else if (message instanceof AcpSchema.JSONRPCRequest) {
+AcpSchema.JSONRPCRequest request = (AcpSchema.JSONRPCRequest) message;			logger.debug("Received request: {}", request);
 			logger.trace("Incoming request method='{}' id={}", request.method(), request.id());
 			handleIncomingRequest(request).onErrorResume(error -> {
 				// Preserve error codes from AcpProtocolException, wrap others in INTERNAL_ERROR
 				int errorCode;
 				Object errorData = null;
-				if (error instanceof AcpProtocolException protocolException) {
-					errorCode = protocolException.getCode();
+				if (error instanceof AcpProtocolException) {
+AcpProtocolException protocolException = (AcpProtocolException) error;					errorCode = protocolException.getCode();
 					errorData = protocolException.getData();
 				}
 				else {
 					errorCode = AcpErrorCodes.INTERNAL_ERROR;
 				}
-				var errorResponse = new AcpSchema.JSONRPCResponse(AcpSchema.JSONRPC_VERSION, request.id(), null,
+				AcpSchema.JSONRPCResponse errorResponse = new AcpSchema.JSONRPCResponse(AcpSchema.JSONRPC_VERSION, request.id(), null,
 						new AcpSchema.JSONRPCError(errorCode, error.getMessage(), errorData));
 				return Mono.just(errorResponse);
 			}).flatMap(this.transport::sendMessage).onErrorComplete(t -> {
@@ -201,8 +201,8 @@ public class AcpClientSession implements AcpSession {
 				return true;
 			}).subscribe();
 		}
-		else if (message instanceof AcpSchema.JSONRPCNotification notification) {
-			logger.debug("Received notification: {}", notification);
+		else if (message instanceof AcpSchema.JSONRPCNotification) {
+AcpSchema.JSONRPCNotification notification = (AcpSchema.JSONRPCNotification) message;			logger.debug("Received notification: {}", notification);
 			logger.trace("Incoming notification method='{}' params={}", notification.method(), notification.params());
 			handleIncomingNotification(notification).onErrorComplete(t -> {
 				logger.error("Error handling notification: {}", t.getMessage());
@@ -221,7 +221,7 @@ public class AcpClientSession implements AcpSession {
 	 */
 	private Mono<AcpSchema.JSONRPCResponse> handleIncomingRequest(AcpSchema.JSONRPCRequest request) {
 		return Mono.defer(() -> {
-			var handler = this.requestHandlers.get(request.method());
+			RequestHandler handler = this.requestHandlers.get(request.method());
 			if (handler == null) {
 				MethodNotFoundError error = getMethodNotFoundError(request.method());
 				logger.warn("No handler registered for request method '{}': {} - {}",
@@ -234,14 +234,27 @@ public class AcpClientSession implements AcpSession {
 
 			logger.debug("Invoking handler for method '{}'", request.method());
 			logger.trace("Handler params for '{}': {}", request.method(), request.params());
-			return handler.handle(request.params())
-				.doOnSuccess(result -> logger.debug("Handler for '{}' completed successfully", request.method()))
-				.doOnError(error -> logger.debug("Handler for '{}' threw error: {}", request.method(), error.getMessage()))
-				.map(result -> new AcpSchema.JSONRPCResponse(AcpSchema.JSONRPC_VERSION, request.id(), result, null));
+			@SuppressWarnings("unchecked")
+			Mono<Object> result = handler.handle(request.params());
+			return result
+				.doOnSuccess(r -> logger.debug("Handler for '{}' completed successfully", request.method()))
+				.doOnError(Throwable.class, err -> logger.debug("Handler for '{}' threw error: {}", request.method(), err.getMessage()))
+				.map(r -> new AcpSchema.JSONRPCResponse(AcpSchema.JSONRPC_VERSION, request.id(), r, null));
 		});
 	}
 
-	record MethodNotFoundError(String method, String message, Object data) {
+	static final class MethodNotFoundError {
+		private final String method;
+		private final String message;
+		private final Object data;
+		MethodNotFoundError(String method, String message, Object data) {
+			this.method = method;
+			this.message = message;
+			this.data = data;
+		}
+		String method() { return this.method; }
+		String message() { return this.message; }
+		Object data() { return this.data; }
 	}
 
 	private MethodNotFoundError getMethodNotFoundError(String method) {
@@ -249,20 +262,20 @@ public class AcpClientSession implements AcpSession {
 		switch (method) {
 			case AcpSchema.METHOD_FS_READ_TEXT_FILE:
 				return new MethodNotFoundError(method, "File system read not supported",
-						Map.of("reason", "Client does not have fs.readTextFile capability"));
+						java.util.Collections.singletonMap("reason", (Object) "Client does not have fs.readTextFile capability"));
 			case AcpSchema.METHOD_FS_WRITE_TEXT_FILE:
 				return new MethodNotFoundError(method, "File system write not supported",
-						Map.of("reason", "Client does not have fs.writeTextFile capability"));
+						java.util.Collections.singletonMap("reason", (Object) "Client does not have fs.writeTextFile capability"));
 			case AcpSchema.METHOD_SESSION_REQUEST_PERMISSION:
 				return new MethodNotFoundError(method, "Permission request not supported",
-						Map.of("reason", "No requestPermissionHandler registered - use --yolo flag or register a handler"));
+						java.util.Collections.singletonMap("reason", (Object) "No requestPermissionHandler registered - use --yolo flag or register a handler"));
 			case AcpSchema.METHOD_TERMINAL_CREATE:
 			case AcpSchema.METHOD_TERMINAL_OUTPUT:
 			case AcpSchema.METHOD_TERMINAL_RELEASE:
 			case AcpSchema.METHOD_TERMINAL_WAIT_FOR_EXIT:
 			case AcpSchema.METHOD_TERMINAL_KILL:
 				return new MethodNotFoundError(method, "Terminal not supported",
-						Map.of("reason", "Client does not have terminal capability"));
+						java.util.Collections.singletonMap("reason", (Object) "Client does not have terminal capability"));
 			default:
 				return new MethodNotFoundError(method, "Method not found: " + method, null);
 		}
@@ -275,7 +288,7 @@ public class AcpClientSession implements AcpSession {
 	 */
 	private Mono<Void> handleIncomingNotification(AcpSchema.JSONRPCNotification notification) {
 		return Mono.defer(() -> {
-			var handler = notificationHandlers.get(notification.method());
+			NotificationHandler handler = notificationHandlers.get(notification.method());
 			if (handler == null) {
 				logger.warn("No handler registered for notification method: {}", notification);
 				return Mono.empty();
@@ -390,7 +403,8 @@ public class AcpClientSession implements AcpSession {
 		}
 
 		private static String formatErrorData(Object data) {
-			if (data instanceof java.util.Map<?, ?> map) {
+			if (data instanceof java.util.Map) {
+				java.util.Map<?, ?> map = (java.util.Map<?, ?>) data;
 				// Extract common fields for better readability
 				Object details = map.get("details");
 				if (details != null) {
