@@ -5,6 +5,7 @@
 package com.agentclientprotocol.sdk.test;
 
 import java.time.Duration;
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.CountDownLatch;
@@ -15,7 +16,7 @@ import com.agentclientprotocol.sdk.client.AcpAsyncClient;
 import com.agentclientprotocol.sdk.client.AcpClient;
 import com.agentclientprotocol.sdk.spec.AcpClientTransport;
 import com.agentclientprotocol.sdk.spec.AcpSchema;
-import io.modelcontextprotocol.json.TypeRef;
+import com.agentclientprotocol.sdk.json.TypeRef;
 import reactor.core.publisher.Mono;
 
 /**
@@ -114,7 +115,7 @@ public class MockAcpClient {
 	 * @return The new session response
 	 */
 	public AcpSchema.NewSessionResponse newSession(String cwd) {
-		AcpSchema.NewSessionResponse response = delegate.newSession(new AcpSchema.NewSessionRequest(cwd, List.of()))
+		AcpSchema.NewSessionResponse response = delegate.newSession(new AcpSchema.NewSessionRequest(cwd, Collections.emptyList()))
 			.block(timeout);
 		if (response != null) {
 			this.currentSessionId = response.sessionId();
@@ -132,7 +133,7 @@ public class MockAcpClient {
 			throw new IllegalStateException("No session created. Call newSession() first.");
 		}
 		return delegate
-			.prompt(new AcpSchema.PromptRequest(currentSessionId, List.of(new AcpSchema.TextContent(text))))
+			.prompt(new AcpSchema.PromptRequest(currentSessionId, java.util.Arrays.asList(new AcpSchema.TextContent(text))))
 			.block(timeout);
 	}
 
@@ -143,7 +144,7 @@ public class MockAcpClient {
 	 * @return The prompt response
 	 */
 	public AcpSchema.PromptResponse prompt(String sessionId, String text) {
-		return delegate.prompt(new AcpSchema.PromptRequest(sessionId, List.of(new AcpSchema.TextContent(text))))
+		return delegate.prompt(new AcpSchema.PromptRequest(sessionId, java.util.Arrays.asList(new AcpSchema.TextContent(text))))
 			.block(timeout);
 	}
 
@@ -180,7 +181,7 @@ public class MockAcpClient {
 	 * @return The list of updates
 	 */
 	public List<AcpSchema.SessionNotification> getReceivedUpdates() {
-		return List.copyOf(receivedUpdates);
+		return Collections.unmodifiableList(new java.util.ArrayList<>(receivedUpdates));
 	}
 
 	/**
@@ -188,7 +189,7 @@ public class MockAcpClient {
 	 * @return The list of permission requests
 	 */
 	public List<AcpSchema.RequestPermissionRequest> getReceivedPermissionRequests() {
-		return List.copyOf(receivedPermissionRequests);
+		return Collections.unmodifiableList(new java.util.ArrayList<>(receivedPermissionRequests));
 	}
 
 	/**
@@ -196,7 +197,7 @@ public class MockAcpClient {
 	 * @return The list of file read requests
 	 */
 	public List<AcpSchema.ReadTextFileRequest> getReceivedFileReadRequests() {
-		return List.copyOf(receivedFileReadRequests);
+		return Collections.unmodifiableList(new java.util.ArrayList<>(receivedFileReadRequests));
 	}
 
 	/**
@@ -204,7 +205,7 @@ public class MockAcpClient {
 	 * @return The list of file write requests
 	 */
 	public List<AcpSchema.WriteTextFileRequest> getReceivedFileWriteRequests() {
-		return List.copyOf(receivedFileWriteRequests);
+		return Collections.unmodifiableList(new java.util.ArrayList<>(receivedFileWriteRequests));
 	}
 
 	/**
@@ -353,7 +354,7 @@ public class MockAcpClient {
 
 			// Replace the delegate using reflection
 			try {
-				var field = MockAcpClient.class.getDeclaredField("delegate");
+				java.lang.reflect.Field field = MockAcpClient.class.getDeclaredField("delegate");
 				field.setAccessible(true);
 				field.set(mockClient, delegate);
 			}
