@@ -61,11 +61,11 @@ class MockAcpAgentTest {
 
 			AcpAsyncClient client = AcpClient.async(pair.clientTransport()).build();
 			client.initialize(new AcpSchema.InitializeRequest(1, new AcpSchema.ClientCapabilities())).block(TIMEOUT);
-			client.newSession(new AcpSchema.NewSessionRequest("/workspace", List.of())).block(TIMEOUT);
+			client.newSession(new AcpSchema.NewSessionRequest("/workspace", java.util.Collections.emptyList())).block(TIMEOUT);
 
 			mockAgent.expectPrompts(1);
 			client
-				.prompt(new AcpSchema.PromptRequest("test-session", List.of(new AcpSchema.TextContent("Hello agent"))))
+				.prompt(new AcpSchema.PromptRequest("test-session", java.util.Collections.<AcpSchema.ContentBlock>singletonList(new AcpSchema.TextContent("Hello agent"))))
 				.block(TIMEOUT);
 
 			assertThat(mockAgent.awaitPrompts(TIMEOUT)).isTrue();
@@ -94,7 +94,7 @@ class MockAcpAgentTest {
 
 			AcpAsyncClient client = AcpClient.async(pair.clientTransport()).build();
 			client.initialize(new AcpSchema.InitializeRequest(1, new AcpSchema.ClientCapabilities())).block(TIMEOUT);
-			client.newSession(new AcpSchema.NewSessionRequest("/workspace", List.of())).block(TIMEOUT);
+			client.newSession(new AcpSchema.NewSessionRequest("/workspace", java.util.Collections.emptyList())).block(TIMEOUT);
 
 			client.cancel(new AcpSchema.CancelNotification("cancel-session")).block(TIMEOUT);
 			Thread.sleep(100); // Give time for notification to arrive
